...
            .padding(horizontal = 16.dp)
    ) {
        TextField(
            value = text,
            onValueChange = { text = it },
            singleLine = true,
            placeholder = { Text("Search for recipes...") },
            modifier = Modifier.fillMaxWidth()
        )
        Button(
            onClick = {
                Log.i(null, "Search for recipes containing ${text}")
                isLoading = true
...
            if (isLoading) {
                CircularProgressIndicator(
                    color = MaterialTheme.colorScheme.onPrimary,
                    strokeWidth = 8.dp,
                )
            } else {
                Text("Fetch Recipes")
            }
        }
    }
}

@Composable
...
